Bug 121597 - FILESAVE DOCX: don't export empty paragraphs at the place of removed paragraph blocks (change tracking)
Summary: FILESAVE DOCX: don't export empty paragraphs at the place of removed paragrap...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
: 112366 (view as bug list)
Depends on: 115521
Blocks: DOCX-Track-Changes 121109
  Show dependency treegraph
 
Reported: 2018-11-21 16:25 UTC by László Németh
Modified: 2022-10-27 07:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test document (8.68 KB, application/vnd.oasis.opendocument.text)
2018-11-21 22:54 UTC, László Németh
Details
extended test file (10.34 KB, application/vnd.oasis.opendocument.text)
2018-11-22 17:06 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2018-11-21 16:25:36 UTC

    
Comment 1 Xisco Faulí 2018-11-21 17:37:25 UTC
Hi László Németh,
Could it be possible to attach a sample document and the steps to reproduce it ?
Comment 2 László Németh 2018-11-21 22:54:40 UTC
Created attachment 146894 [details]
test document
Comment 3 László Németh 2018-11-21 22:59:59 UTC
(In reply to Xisco Faulí from comment #1)
> Hi László Németh,
> Could it be possible to attach a sample document and the steps to reproduce
> it ?

@Xisco, sorry, I've pushed it only to the gerrit patch https://gerrit.libreoffice.org/#/c/63731/

Now I've attached it here, too. Exporting it to DOCX adds an empty line to the document (see without showing tracked changes).
Comment 4 Commit Notification 2018-11-22 17:05:12 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d1ee27cf9b83ad9b69d1ee00e2e8969fb35446c9%5E%21

tdf#121597 DOCX: don't export empty paragraphs at tracked deletion

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2018-11-22 17:06:07 UTC
Created attachment 146917 [details]
extended test file
Comment 6 Commit Notification 2018-11-23 08:16:15 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/626504ee27d853d70a5a8b3b62d69313b9b6eb98%5E%21

tdf#121597 DOCX: don't export empty paragraphs at tracked deletion

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 László Németh 2019-05-08 12:01:11 UTC
*** Bug 112366 has been marked as a duplicate of this bug. ***