tdf#121597 DOCX: don't export empty paragraphs at tracked deletion

of non-empty multiple paragraphs. Complete the fix for
"tdf#115521 DOCX export: keep empty paragraphs in tracked deletion"
in commit 2cdc870a7ee82d0faf35cdb5b2bf4e687cfd2b8d

Change-Id: Ic3446e2a2118e604a7a4d269c8fed1f9f157846f